fix table  border-radius by switching collapse to separate spacing

--- a/src/components/table/dependencies/style/style.css
+++ b/src/components/table/dependencies/style/style.css
@@ -5,7 +5,8 @@
 }
 .dyvix-table {
   width: 100%;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0;
   text-align: left;
   font-family:
     'Geist',
